try reduced docker image by using custom jre